add artifact sub value input

--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.css
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.css
@@ -31,12 +31,12 @@ table {
     white-space: nowrap;
 }
 
-.fiedl-part-1 {
+.field-part-1 {
     width: 10em;
     margin-right: 4px;
 }
 
-.fiedl-part-2 {
+.field-part-2 {
     margin-left: 0.5em;
     width: 2.5em;
     text-align:center;
