--- a/src/app/features/character/component/main/main.component.css
+++ b/src/app/features/character/component/main/main.component.css
@@ -33,3 +33,18 @@
 .middle {
     margin-top: 24px;
 }
+
+.container-buttons {
+    position: fixed;
+    right: 1.5em;
+    bottom: 1.2em;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.icon-common {
+    background-color: #f5f5f5;
+    color: black;
+}
