--- a/src/app/features/character/component/other/other.component.css
+++ b/src/app/features/character/component/other/other.component.css
@@ -116,7 +116,7 @@ input[type=number] {
     display: table;
     cursor: pointer;
     border: 1px solid rgba(128, 128, 128, 0.3);
-    border-radius: 12%;
+    border-radius: 8px;
     padding: 0.5rem;
     margin-left: auto;
     margin-right: auto;
