--- a/src/app/features/homePage/component/main/main.component.css
+++ b/src/app/features/homePage/component/main/main.component.css
@@ -31,3 +31,27 @@
 .middle {
     margin-top: 24px;
 }
+
+.container-buttons {
+    position: fixed;
+    right: 1.5em;
+    bottom: 1.2em;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.icon-common {
+    background-color: #f5f5f5;
+    color: black;
+}
+
+.align-v {
+    display: flex;
+    align-items: center;
+}
+
+.align-icon {
+    margin-top: -2px;
+}
