fix homePage clear data title

--- a/src/app/features/homePage/component/main/main.component.html
+++ b/src/app/features/homePage/component/main/main.component.html
@@ -14,7 +14,7 @@
                 </button>
                 <button mat-menu-item class="align-v" (click)="removeCurrentCache()" >
                     <mat-icon class="align-icon">layers_clear</mat-icon>
-                    <span>{{ 'MENU.DELETE_CACHE.TITLE' | translate }}</span>
+                    <span>{{ 'MENU.DELETE_CACHE.ALL_TITLE' | translate }}</span>
                 </button>
             </mat-menu>
         </div>
