--- a/src/app/features/character/component/artifact-chips/artifact-chips.component.html
+++ b/src/app/features/character/component/artifact-chips/artifact-chips.component.html
@@ -1,4 +1,4 @@
-<mat-chip-list aria-label="Joyful Chip" [multiple]="true">
+<mat-chip-list class="chip-list" aria-label="Joyful Chip" [multiple]="true">
     <mat-chip class="none-display"></mat-chip>
     <ng-container *ngFor="let chip of chips">
         <mat-chip 
