--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -41,7 +41,7 @@
                         </app-mat-filtering-selector>
                         <!-- 値 -->
                         <br>
-                        <mat-form-field appearance="legacy" floatLabel="always" class="normal-fiedld">
+                        <mat-form-field appearance="legacy" floatLabel="always" class="normal-field">
                             <mat-label [innerText]="'OTHER.TARGETVALUE' | translate"></mat-label>
                             <input matInput 
                                 type="number"
