--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.html
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.html
@@ -1,4 +1,5 @@
 <div class="auto-div">
+    <div echarts *ngIf="$any(echartsOption.dataset).source.length > 0" [options]="echartsOption" class="echarts-div"></div>
     <table [formGroup]="userInput">
         <tr>
             <td class="left">
@@ -39,7 +40,7 @@
                     <span [innerText]="'AUTO.' + item.name | translate"></span>
                 </td>
                 <td class="right">
-                    <mat-form-field appearance="legacy" floatLabel="always" *ngIf="item.isInput" class="normal-fiedld">
+                    <mat-form-field appearance="legacy" floatLabel="always" *ngIf="item.isInput" class="normal-field">
                         <mat-label [innerText]="'AUTO.' + item.title | translate"></mat-label>
                         <input matInput
                             type="number"
@@ -49,7 +50,7 @@
                         >
                         <span matSuffix>%&nbsp;</span>
                     </mat-form-field>
-                    <mat-form-field appearance="legacy" floatLabel="always" *ngIf="item.isSelect" class="normal-fiedld">
+                    <mat-form-field appearance="legacy" floatLabel="always" *ngIf="item.isSelect" class="normal-field">
                         <mat-label [innerText]="'AUTO.' + item.title | translate"></mat-label>
                         <mat-select 
                             [formControlName]="item.model"
