--- a/src/app/features/character/component/talent/talent.component.css
+++ b/src/app/features/character/component/talent/talent.component.css
@@ -16,6 +16,10 @@
     padding-top: 2px;
 }
 
+:host ::ng-deep .content .mat-expansion-panel{
+    overflow: visible;
+}
+
 .expand {
     margin-top: 1px;
 }
