--- a/src/app/features/character/component/weapon/weapon.component.css
+++ b/src/app/features/character/component/weapon/weapon.component.css
@@ -21,6 +21,10 @@
     padding-top: 2px;
 }
 
+:host ::ng-deep .content .mat-expansion-panel{
+    overflow: visible;
+}
+
 .expand {
     margin-top: 1px;
 }
