fix visible z-index

--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -27,8 +27,8 @@
     <div class="content" [@otherLoad]="otherState">
         <app-character [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_character]]" [name]="name_character" (draged)="onChildStartDrag($event)"></app-character>
         <app-weapon [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_weapon]]" [name]="name_weapon" (draged)="onChildStartDrag($event)"></app-weapon>
-        <app-talent [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_talent]]" [name]="name_talent" (draged)="onChildStartDrag($event)"></app-talent>
-        <app-constellation [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_constellation]]" [name]="name_constellation" (draged)="onChildStartDrag($event)"></app-constellation>
+        <app-talent class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_talent]]" [name]="name_talent" (draged)="onChildStartDrag($event)"></app-talent>
+        <app-constellation class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_constellation]]" [name]="name_constellation" (draged)="onChildStartDrag($event)"></app-constellation>
         <app-enemy [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_enemy]]" [name]="name_enemy" (draged)="onChildStartDrag($event)"></app-enemy>
         <app-artifact [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_artifact]]" [name]="name_artifact" (draged)="onChildStartDrag($event)"></app-artifact>
         <app-team [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_other]]" [name]="name_other" (draged)="onChildStartDrag($event)"></app-team>
